# duco_gcr5_910_ros2_ws

./: .gitignore  README.md
src/duco_gcr5_910_moveit_config/: CMakeLists.txt  package.xml
src/duco_gcr5_910_moveit_config/config/: example_joint_waypoints.yaml  gcr5_910.ros2_control.xacro  gcr5_910.srdf  gcr5_910_gazebo.urdf.xacro  initial_positions_gazebo.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers_dual.yaml  ros2_controllers_dual.yaml
src/duco_gcr5_910_moveit_config/launch/: demo.launch.py  digital_twin_real.launch.py  gazebo.launch.py
src/duco_gcr5_910_moveit_config/scripts/: send_joint_waypoints.py
src/duco_gcr5_910_moveit_config/worlds/: gcr5_910_empty.sdf
src/duco_msg/: package.xml
src/duco_ros_driver/: CMakeLists.txt  package.xml
src/duco_ros_driver/include/duco_ros_driver/: DucoDriver.h
src/duco_ros_driver/src/: DualTrajectoryAction.cpp  DucoDriver.cpp  DucoRobotStatus.cpp  DucoRobotStatusNode.cpp
src/duco_support/urdf/: duco_gcr5_910.urdf
src/plc_modbus_bridge/: package.xml  setup.cfg  setup.py
src/plc_modbus_bridge/plc_modbus_bridge/: plc_modbus_bridge.py
