<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plc_modbus_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 to Siemens S7-1214C Modbus TCP bridge for DUCO robot coordination.</description>
  <maintainer email="3316594954@qq.com">lsh953</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
